rework slider to make it more vibrant, general order form improvements & bug fixes (element alignment and such)

--- a/client/webserver/site/src/css/colors.scss
+++ b/client/webserver/site/src/css/colors.scss
@@ -3,7 +3,7 @@
 body:not(.dark) {
   // body & text
   --body-bg: #fafafa;
-  --body-bg-lower-opacity: #fafafa88;
+  --body-bg-lower-opacity: #fafafa;
   --section-bg: #f6f6f6;
   --form-bg: #f0f0f0;
   --tertiary-bg: #7772;
@@ -12,7 +12,7 @@ body:not(.dark) {
   --text-danger: #d22;
   --text-warning: #f82e;
   --text-grey: #777;
-  --border-color: #ddd;
+  --border-color: #d4d1d1;
   --hint-color: #4397cd;
   --violet-color: #7F00FF;
 
